# ARCOS

./: .dockerignore  Cargo.toml  Dockerfile.agent  Dockerfile.maestro  Makefile  README.md  artifacts.py  auto_agent.py  backtester.py  backtester_v3.py  calibrator.py  daily_report.py  dashboard.py  data_fetcher.py  db_manager.py  deploy_cloud_run.sh  discovery.py  docker-compose.yml  feature_engine.py  janitor.sh  lstm_brain.py  news_reader.py  plotter.py  producer_agent.py  requirements.txt  signal_engine.py  social_scraper.py  test_email.py
daily_briefings/: Daily_Briefing_2025-12-08.md
examples/: message.xml
schemas/: arcos-core.xsd  calibration_state.schema.json  feature_store.schema.json  flow_snapshot.schema.json  fundamental_snapshot.schema.json  macro_snapshot.schema.json  market_snapshot.schema.json  news_impact_report.schema.json  news_snapshot.schema.json  signal_candidates.schema.json
src/: main.rs
workspace/: arcos_vault.db  portfolio_state.json  transaction_ledger.json
