[package]
name = "arcos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
# NEW: Email Library (using rustls for secure Gmail connection)
lettre = { version = "0.11", features = ["builder", "smtp-transport", "rustls-tls"] }