[package]
name = "arcos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.10"
quick-xml = { version = "0.28", features = ["serialize"] }
redis = "0.23"
tokio = { version = "1", features = ["full"] }
warp = "0.3" 
# Using warp for simple health check endpoint
sha2 = "0.10"
chrono = { version = "0.4", features = ["std"] }
